Add embeds for various cuisines

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 <button onclick="Calendly.initPopupWidget({url: 'https://calendly.com/chefcarminenolls/personal-chef?hide_event_type_details=1&hide_gdpr_banner=1&primary_color=ecdabf'});return false;">Reserve Now</button>
 <!-- Calendly link widget end -->
-<br>
+
+<h1>American</h1>
 <iframe src="https://open.spotify.com/embed/album/67sIlPee6y2gchfhd5Ckvt?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+<h1>Thai</h1>
+<iframe src="https://open.spotify.com/embed/playlist/1ra3sBLh3Npaix7ui5aUO8" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+<h1>Italian</h1>
+<iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWT1R6bXL4dyW" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+<h1>Brazilian</h1>
+<iframe src="https://open.spotify.com/embed/album/1mr3akOKMWHVRpVzAQNKSK" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </body>
 </html>
